--- a/featrures.ipynb
+++ b/featrures.ipynb
@@ -7,56 +7,108 @@
    "outputs": [],
    "source": [
     "# High risk data\n",
-    "'MaternalPatientID', 'MaternalMedicalRecordNumber', 'ChildPatientID','ChildMedicalRecordNumber', 'ChildEncounterID', \n",
+    "'MaternalPatientID', 'MaternalMedicalRecordNumber', \n",
+    "'ChildPatientID','ChildMedicalRecordNumber', \n",
+    "\n",
+    "#'ChildEncounterID', \n",
     "# Clinic Data\n",
     "# Maternal Demographic Characteristics\n",
-    "'MaternalAgeAtDelivery','MaternalRace', 'MaternalLanguage', \n",
-    "'MyChartAccess',\n",
-    "'LatestMaritalStatus', 'YearsOfEducation', 'Gravida', 'Parity',\n",
-    "'DeliveryDate', 'GestationalAge_Weeks', 'GestAge_Days',\n",
-    "'ChildDeathDate', 'MaternalDeathDate', \n",
+    "'MaternalAgeAtDelivery', # >30 age risky mother\n",
+    "'MaternalRace', \n",
+    "#'MaternalLanguage', \n",
+    "#'MyChartAccess', # pval 0.93 chi2 0.0007\n",
+    "'LatestMaritalStatus', \n",
+    "'YearsOfEducation', # Only 5% data we can just mentioned this statistical results\n",
+    "# MWU for yearsofeducation p 0.66 thats meant doesnt significant for readmission\n",
+    "'Gravida', # Significant\n",
+    "'Parity', # Significant\n",
+    "'DeliveryDate', # For season or month \n",
+    "'GestationalAge_Weeks', #\n",
+    "'GestAge_Days', # More continious continious data better than splitted data\n",
+    "'ChildDeathDate', # 25 dead baby but only 2 baby admitted or only 6 admitted\n",
+    "# Also 18 baby dead at first hour they could be excluded\n",
+    "'MaternalDeathDate', \n",
     "# Children demographic characteristics\n",
-    "'ChildGender', 'ChildRace','ChildEthnicity',\n",
+    "'ChildGender', # p 0.43 didnt significant\n",
+    "'ChildRace', # Unnecessary\n",
+    "'ChildEthnicity', # Unnecessary\n",
     "\n",
     "# Prenatal Characteristics\n",
-    "'Mother_BMI_AtDelivery', 'PrePregnancyWeight_KG',\n",
-    "'PositiveDrugScreenDuringPregnancy','Alcohol abuse', 'Smoking during pregnancy',\n",
+    "'Mother_BMI_AtDelivery', \n",
+    "'PrePregnancyWeight_KG',\n",
+    "'PositiveDrugScreenDuringPregnancy', #p 0.001 doesnt significant\n",
+    "'Alcohol abuse', # p val 0.93\n",
+    "'Smoking during pregnancy', # 0.013\n",
     "# Enfections\n",
-    "'HepB_PositiveDuringPregnancy', 'HCV_PositiveDuringPregnancy',\n",
-    "'HIV_PositiveDuringPregnancy', 'SyphilisPositiveDuringPregnancy',\n",
-    "'GBS_PositiveDuringPregnancy', \n",
+    "'HepB_PositiveDuringPregnancy', # p val 0.42\n",
+    "'HCV_PositiveDuringPregnancy', #0.31\n",
+    "'HIV_PositiveDuringPregnancy', # 0.83\n",
+    "'SyphilisPositiveDuringPregnancy', # 0.55\n",
+    "'GBS_PositiveDuringPregnancy', # 0.016\n",
+    "'AnyInfection' #0.118\n",
     "# Prenatal Complications and Other Situations\n",
-    "'Antepartum Haemorrhage', 'Eclampsia', 'IUGR',\n",
-    "'Maternal chronic hypertension', 'Maternal Diabetes',\n",
-    "'Maternal pregnancy-induced hypertension', 'Oligohydramnios',\n",
-    "'Placenta previa', 'Polyhydramnios', 'Pre-eclampsia',\n",
-    "'Pregnancy Complications', 'Preterm premature rupture of membranes',\n",
-    "'Spontaneous abortion',\n",
-    "'Umbilical cord prolapse', \n",
+    "'Antepartum Haemorrhage', #0.001\n",
+    "'Eclampsia', #0.54\n",
+    "'IUGR', # 0.02\n",
+    "'Maternal chronic hypertension', #0.51\n",
+    "'Maternal Diabetes', # 0.84\n",
+    "'Maternal pregnancy-induced hypertension', # 0.022\n",
+    "'Oligohydramnios', #0.191\n",
+    "'Placenta previa', # 0.59\n",
+    "'Polyhydramnios', # 0.78\n",
+    "'Pre-eclampsia', #0.70\n",
+    "'Pregnancy Complications', # 0.09\n",
+    "'Preterm premature rupture of membranes', #0.01\n",
+    "'Spontaneous abortion', #0.62\n",
+    "'Umbilical cord prolapse', #0.26\n",
     "\n",
     "\n",
-    "'Vaginal delivery',\n",
+    "'Vaginal delivery', # 0.12\n",
     "# Drop This Features because doesnt have data NA all of there\n",
     "# SSRI_DuringPregnancy,Suboxone_DuringPregnancy\n",
     "#  \n",
     "# Natal and Delivery Characteristics\n",
-    "'DeliveryType', 'ROM_Time', 'MultipleGestation',\n",
+    "'DeliveryType', \n",
+    "'ROM_Time', # When I looking biger than 24*60 minutes I found 25515 line. This feature doesnt meaningful\n",
+    "'MultipleGestation', # 0.234\n",
+    "\n",
     "# ER visit Characteristics\n",
-    "'ER_VisitDuringPregnancy', 'ChildER_VisitFirstMonth',\n",
-    "'ChildReadmissionFirstMonth', 'ChildOfficeVisitsFirstMonth',\n",
-    "'AppointmentMadeDuringAdmission',\n",
+    "'ER_VisitDuringPregnancy', # 0.0001\n",
+    "'ChildER_VisitFirstMonth', #\n",
+    "'ChildReadmissionFirstMonth', \n",
+    "'ChildOfficeVisitsFirstMonth', #0.0001 bu this is after the discharge feature\n",
+    "\n",
+    "'AppointmentMadeDuringAdmission', #0.72\n",
     "# Ward characteristics\n",
-    "'ChildLengthOfStayHours', 'DischargeMonth','BirthWeight_Grams',\n",
+    "'ChildLengthOfStayHours', # 0.006\n",
+    "'DischargeMonth', # 0.176\n",
+    "'BirthWeight_Grams', # 0.000001\n",
     "'SGA', \n",
     "# Postnatal Characteristics       \n",
-    "'Apgar1Minute', 'Apgar5Minute',\n",
-    "'Cord_pH_Venous_Date', 'Cord_pH_Venous', 'Cord_pH_Arterial_Date',\n",
-    "'Cord_pH_Arterial', 'MaxHeartRate', 'MinHeartRate', 'AvgHeartRate',\n",
-    "'AvgPulseOx', 'Desaturations', 'MaxTemperature', 'MinTemperature',\n",
-    "'MinBloodGlucose', 'MaxBloodGlucose', 'MinSerumBilirubin',\n",
-    "'MaxSerumBilirubin', 'MaxTranscutaneousBilirubin',\n",
-    "'MinTranscutaneousBilirubin', 'Phototherapy', 'FailedHearing',\n",
-    "'CarSeatTestFailures', 'FeedingType', 'PercentWeightLoss'"
+    "'Apgar1Minute', # 0.001\n",
+    "'Apgar5Minute', # 0.82\n",
+    "'Cord_pH_Venous_Date', \n",
+    "'Cord_pH_Venous', \n",
+    "'Cord_pH_Arterial_Date',\n",
+    "'Cord_pH_Arterial', # 0.56\n",
+    "'MaxHeartRate', #0.02\n",
+    "'MinHeartRate', #0.2\n",
+    "'AvgHeartRate', #0.4\n",
+    "'AvgPulseOx', #0.008\n",
+    "'Desaturations', #0.159\n",
+    "'MaxTemperature', # 0.38\n",
+    "'MinTemperature', # 0.003\n",
+    "'MinBloodGlucose', # 0.70\n",
+    "'MaxBloodGlucose', # 0.12\n",
+    "'MinSerumBilirubin', # 0.72\n",
+    "'MaxSerumBilirubin', #0.26\n",
+    "'MaxTranscutaneousBilirubin',\n",
+    "'MinTranscutaneousBilirubin', #<0.0001\n",
+    "'Phototherapy', #0.92\n",
+    "'FailedHearing', #0.012\n",
+    "'CarSeatTestFailures', #0.30\n",
+    "'FeedingType', #<0.0001\n",
+    "'PercentWeightLoss' #<0.0001"
    ]
   },
   {
@@ -76,6 +128,23 @@
     "'MinTranscutaneousBilirubin', 'Phototherapy', 'FailedHearing',\n",
     "'CarSeatTestFailures', 'FeedingType', 'PercentWeightLoss'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ChildReadmissionFirstMonth\n",
+    "er AppointmentMadeDuringAdmissio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
