--- a/ppscoreeda.ipynb
+++ b/ppscoreeda.ipynb
@@ -365,110 +365,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'MaternalPatientID',\n",
-      "'MaternalMedicalRecordNumber',\n",
-      "'ChildPatientID',\n",
-      "'ChildMedicalRecordNumber',\n",
-      "'ChildEncounterID',\n",
-      "'MaternalAgeAtDelivery',\n",
-      "'MaternalRace',\n",
-      "'MaternalLanguage',\n",
-      "'MyChartAccess',\n",
-      "'LatestMaritalStatus',\n",
-      "'YearsOfEducation',\n",
-      "'Gravida',\n",
-      "'Parity',\n",
-      "'DeliveryDate',\n",
-      "'GestationalAge_Weeks',\n",
-      "'GestAge_Days',\n",
-      "'ChildDeathDate',\n",
-      "'MaternalDeathDate',\n",
-      "'ChildGender',\n",
-      "'ChildRace',\n",
-      "'ChildEthnicity',\n",
-      "'ChildLengthOfStayHours',\n",
-      "'DischargeMonth',\n",
-      "'DeliveryType',\n",
-      "'ROM_Time',\n",
-      "'MultipleGestation',\n",
-      "'BirthWeight_Grams',\n",
-      "'SGA',\n",
-      "'ER_VisitDuringPregnancy',\n",
-      "'Mother_BMI_AtDelivery',\n",
-      "'PrePregnancyWeight_KG',\n",
-      "'SSRI_DuringPregnancy',\n",
-      "'Suboxone_DuringPregnancy',\n",
-      "'Methadone_DuringPregnancy',\n",
-      "'PositiveDrugScreenDuringPregnancy',\n",
-      "'HepB_PositiveDuringPregnancy',\n",
-      "'HCV_PositiveDuringPregnancy',\n",
-      "'HIV_PositiveDuringPregnancy',\n",
-      "'SyphilisPositiveDuringPregnancy',\n",
-      "'GBS_PositiveDuringPregnancy',\n",
-      "'Alcohol abuse',\n",
-      "'Antepartum Haemorrhage',\n",
-      "'Eclampsia',\n",
-      "'IUGR',\n",
-      "'Maternal chronic hypertension',\n",
-      "'Maternal Diabetes',\n",
-      "'Maternal pregnancy-induced hypertension',\n",
-      "'Oligohydramnios',\n",
-      "'Placenta previa',\n",
-      "'Polyhydramnios',\n",
-      "'Pre-eclampsia',\n",
-      "'Pregnancy Complications',\n",
-      "'Preterm premature rupture of membranes',\n",
-      "'Smoking during pregnancy',\n",
-      "'Spontaneous abortion',\n",
-      "'Umbilical cord prolapse',\n",
-      "'Vaginal delivery',\n",
-      "'AppointmentMadeDuringAdmission',\n",
-      "'Apgar1Minute',\n",
-      "'Apgar5Minute',\n",
-      "'HIE_Severity',\n",
-      "'Cord_pH_Venous_Date',\n",
-      "'Cord_pH_Venous',\n",
-      "'Cord_pH_Arterial_Date',\n",
-      "'Cord_pH_Arterial',\n",
-      "'MaxHeartRate',\n",
-      "'MinHeartRate',\n",
-      "'AvgHeartRate',\n",
-      "'AvgPulseOx',\n",
-      "'Desaturations',\n",
-      "'Desaturations_5DaysBeforeDischarge',\n",
-      "'Bradycardia_5DaysBeforeDischarge',\n",
-      "'SurfactantDoses',\n",
-      "'MaxTemperature',\n",
-      "'MinTemperature',\n",
-      "'MaxFiO2',\n",
-      "'MinBloodGlucose',\n",
-      "'MaxBloodGlucose',\n",
-      "'GlucoseGelGiven',\n",
-      "'MinSerumBilirubin',\n",
-      "'MaxSerumBilirubin',\n",
-      "'MaxTranscutaneousBilirubin',\n",
-      "'MinTranscutaneousBilirubin',\n",
-      "'Phototherapy',\n",
-      "'MinSodium',\n",
-      "'MaxSodium',\n",
-      "'MinHemoglobin',\n",
-      "'NoUrineOutputShift',\n",
-      "'FailedHearing',\n",
-      "'CarSeatTestFailures',\n",
-      "'FeedingType',\n",
-      "'PercentWeightLoss',\n",
-      "'ChildNumberOfAntibioticDays',\n",
-      "'ChildBloodCultureCount',\n",
-      "'HighestIVH_Grade',\n",
-      "'target',\n"
-     ]
+     "data": {
+      "text/plain": [
+       "('target',)"
+      ]
+     },
+     "execution_count": 268,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
