Fix execution count in notebook and add spacing for readability

--- a/ppscoreeda.ipynb
+++ b/ppscoreeda.ipynb
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1532,7 +1532,9 @@
     "# MaternalLanguage, MaternalRace, MyChartAccess, LatestMaritalStatus\n",
     "odds_ratios_race = calculate_odds_ratio(data, 'LatestMaritalStatus')\n",
     "# Display the results\n",
-    "odds_ratios_race[['Category', 'Reference', 'OR with CI', 'p-value']].round(4)"
+    "odds_ratios_race[['Category', 'Reference', 'OR with CI', 'p-value']].round(4)\n",
+    "\n",
+    "\n"
    ]
   },
   {
