--- a/Model1.ipynb
+++ b/Model1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,6 +83,36 @@
     "\n",
     "# Display the first few rows of the updated dataframe\n",
     "data.target.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nicuchild = data[['ChildPatientID']]\n",
+    "nicuchild.to_csv(r\"C:\\Users\\AKBASLI\\OneDrive - Cleveland Clinic\\Desktop\\NEORAS\\NICUChildID.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.28950122078828044"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "830/data.shape[0] # 8516 patients with target = 1"
    ]
   },
   {
